2002-06-14 Araki Ken <arakiken@users.sf.net>

	* w3mmlconfig is updated.
	* compilation never fails if --enable-utmp option is specified on Cygwin.
	  (Thanks to Sato Seiichi san)

2002-06-13 Araki Ken <arakiken@users.sf.net>

	* If use_dynamic_comb option was dynamically changed over twice, RTL lines
	  were shown correctly and even worse mlterm died. fixed.

2002-06-12 MINAMI Hirokazu <minami@chem.s.u-tokyo.ac.jp>

	* mlcc (new console based config tool) is added.

2002-06-12 Araki Ken <arakiken@users.sf.net>

	* "rows" and "cols" are added to ESC ] 5380 configuration protocol.

2002-06-11 Tomohiro KUBOTA <kubota@debian.org>

	* XIM server could not be changed by using mlconfig; fixed.
	* manpage update for mlconfig.
	* a new sample color configuration file.

2002-06-09 Araki Ken <arakiken@users.sf.net>

	* All characters in line were redrawn if it is modified even a little. fixed.

2002-06-08 Araki Ken <arakiken@users.sf.net>

	* Garbage could be left on the right side of screen.
	  (specially when ut is defined in termcap)
	  fixed.
	* "ESC [ Ps X VT100" sequence is supported.

2002-06-08 Tomohiro KUBOTA <kubota@debian.org>

	* Removed command options from mlconfig which are not
	  needed any more.

2002-06-06 Araki Ken <arakiken@users.sf.net>

	* -K/--maxptys option is removed.
	* Logged lines are not faded when screen is not focued.
	* If 0 is specified as value of -sl option, mlterm died. fixed.

2002-06-05 Tomohiro KUBOTA <kubota@debian.org>

	* renewal of mlconfig.

2002-06-04 Araki Ken <arakiken@users.sf.net>

	* mlterm version number is set as the value of "MLTERM" environmental variable.

2002-06-04 Tomohiro KUBOTA <kubota@debian.org>

	* Widgets for anti-alias and variable-font-width were not
	  displayed in mlconfig, fixed.

2002-06-03 Araki Ken <arakiken@users.sf.net>

	* mlconfig path didn't reflect configure prefix. fixed.
	* w3mmlconfig is updated. (Thanks to Sakamoto Hironori san)

2002-06-03 Araki Ken <arakiken@users.sf.net>
